Arreglo de etiqueta HTML

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <div id="container">
 
-            <div id="project-tile">
+            <div id="project-title">
                 <a target="blank_" id=""
                     href="https://github.com/academia-geek/aprendices-geek-entrenamiento-XnicolasG/tree/master/Modulo-3/Tarea-02">
                     <img src="./img/capturaPeliculas.png" alt="">
